--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>prom1</title>
   </head>
   <body>
-    <div id="app"></div>
-    <h2>1234</h2>
+    <div id="app">
+    </div>
+    
   </body>
 </html>
